feat: release sprint 2 0.3
